--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.android.gms:play-services:9.2.1'
     compile 'com.github.clans:fab:1.6.4'
+    compile 'com.google.maps.android:android-maps-utils:0.4+'
 }
